# prefect-proxy

./: .coveragerc  .deepsource.toml  .env.template  .env.webhook_notification_policy.template  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  dailybackupdeployments.yaml  flows.py  kill.sh  logger.py  main.py  prefect_requirements.txt  pyproject.toml  refresh-prefect-airbyte.sh  requirements.txt  schemas.py  service.py  start.sh  tests.py
.github/workflows/: app.yml  ci_check.yml  dalgo-cd.yml  dalgo-ci.yml  deploy.yml  docker.yml
Docker/: .env.template  Dockerfile  Dockerfile.prefect_server  Dockerfile.prefect_worker  docker-compose.dev.yml  docker-compose.yml  start_prefect_server.sh  start_prefect_worker.sh
docker/: Dockerfile  docker-compose.yml
docker_compose/: .env.template  docker-compose.dev.yml  docker-compose.yml
proxy/: exception.py  flows.py  flows_v1.py  helpers.py  main.py  prefect_flows.py  schemas.py  service.py
scripts/: allow_field_overrides.py  cleanup_offline_prefect_workers.py  dailybackupdeployment.py  dailybackupdeployments.yaml  downloadlogs.py  set_deployment_project_dir.py  set_deployment_work_queue.py  update_parameters_of_scheduled_runs.py  webhook_notification_policy.py
tests/: test_helpers.py  test_integration.py  test_main.py  test_prefect_flows.py  test_service.py
