[project]
name = "prefect-proxy"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "black",
  "codecov",
  "coverage",
  "dbt-bigquery",
  "dbt-core",
  "dbt-extractor",
  "dbt-semantic-interfaces",
  "fastapi",
  "gunicorn",
  "pre-commit>=4.2.0",
  "prefect[dbt,gcp]==3.1.15",
  "prefect-airbyte @ git+https://github.com/Ishankoradia/prefect-airbyte.git@upgrade-pydantic-v2",
  "prefect-github",
  "prefect-shell",
  "prefect-sqlalchemy",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "python-dotenv",
  "pytz",
  "pyyaml",
  "requests",
  "sentry-sdk==2.10.0",
  "uvicorn",
]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = 'ddpui\/.*\.pyi?$'

[tool.pylint.messages_control]
max-line-length = 100
fail-under = 6.5
disable = [
  "missing-module-docstring",
  "broad-exception-raised",
  "broad-exception-caught",
  "too-few-public-methods",
  "logging-not-lazy",
  "logging-fstring-interpolation"
]

[tool.pytest.ini_options]
testpaths = [
  "tests"
]

[tool.coverage.run]
source = [
  "proxy"
]
omit = [
  "proxy/schemas.py",
  "proxy/exception.py",
  "tests/*",
  "logger.py"
]
