[project]
name = "prefect-proxy"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "agate==1.9.1",
  "aiosqlite==0.21.0",
  "alembic==1.15.1",
  "annotated-types==0.7.0",
  "anyio==4.9.0",
  "apprise==1.9.2",
  "asgi-lifespan==2.1.0",
  "async-timeout==5.0.1",
  "asyncpg==0.30.0",
  "attrs==25.3.0",
  "babel==2.17.0",
  "black==25.1.0",
  "cachetools==5.5.2",
  "certifi==2025.1.31",
  "cffi==1.17.1",
  "cfgv==3.4.0",
  "charset-normalizer==3.4.1",
  "click==8.1.8",
  "cloudpickle==3.1.1",
  "codecov==2.1.13",
  "colorama==0.4.6",
  "coolname==2.2.0",
  "coverage==7.7.1",
  "croniter==6.0.0",
  "cryptography==44.0.2",
  "daff==1.3.46",
  "dateparser==1.2.1",
  "db-dtypes==1.4.2",
  "dbt-adapters==1.14.3",
  "dbt-bigquery==1.9.1",
  "dbt-common==1.16.0",
  "dbt-core==1.9.3",
  "dbt-extractor==0.5.1",
  "dbt-semantic-interfaces==0.7.4",
  "deepdiff==7.0.1",
  "deprecated==1.2.18",
  "distlib==0.3.9",
  "docker==7.1.0",
  "exceptiongroup==1.2.2",
  "fastapi==0.115.12",
  "filelock==3.18.0",
  "fsspec==2025.3.0",
  "google-api-core==2.24.2",
  "google-api-python-client==2.165.0",
  "google-auth==2.38.0",
  "google-auth-httplib2==0.2.0",
  "google-auth-oauthlib==1.2.1",
  "google-cloud-bigquery==3.30.0",
  "google-cloud-core==2.4.3",
  "google-cloud-dataproc==5.18.1",
  "google-cloud-secret-manager==2.23.2",
  "google-cloud-storage==2.19.0",
  "google-crc32c==1.7.0",
  "google-resumable-media==2.7.2",
  "googleapis-common-protos==1.69.2",
  "graphql-core==3.2.6",
  "graphviz==0.20.3",
  "greenlet==3.1.1",
  "griffe==1.6.2",
  "grpc-google-iam-v1==0.14.2",
  "grpcio==1.71.0",
  "grpcio-status==1.71.0",
  "gunicorn==23.0.0",
  "h11==0.14.0",
  "h2==4.2.0",
  "hpack==4.1.0",
  "httpcore==1.0.7",
  "httplib2==0.22.0",
  "httpx==0.28.1",
  "humanize==4.12.1",
  "hyperframe==6.1.0",
  "identify==2.6.9",
  "idna==3.10",
  "importlib-metadata==6.11.0",
  "iniconfig==2.1.0",
  "isodate==0.6.1",
  "jinja2==3.1.6",
  "jinja2-humanize-extension==0.4.0",
  "jsonpatch==1.33",
  "jsonpointer==3.0.0",
  "jsonschema==4.23.0",
  "jsonschema-specifications==2024.10.1",
  "leather==0.4.0",
  "mako==1.3.9",
  "markdown==3.7",
  "markdown-it-py==3.0.0",
  "markupsafe==3.0.2",
  "mashumaro==3.14",
  "mdurl==0.1.2",
  "more-itertools==10.6.0",
  "msgpack==1.1.0",
  "mypy-extensions==1.0.0",
  "networkx==3.4.2",
  "nodeenv==1.9.1",
  "numpy==2.2.4",
  "oauthlib==3.2.2",
  "opentelemetry-api==1.31.1",
  "ordered-set==4.1.0",
  "orjson==3.10.15",
  "packaging==24.2",
  "pandas==2.2.3",
  "pandas-gbq==0.28.0",
  "parsedatetime==2.6",
  "pathspec==0.12.1",
  "pendulum==3.0.0",
  "platformdirs==4.3.7",
  "pluggy==1.5.0",
  "pre-commit==4.2.0",
  "prefect==3.1.15",
  "prefect-airbyte",
  "prefect-dbt==0.6.6",
  "prefect-gcp==0.6.4",
  "prefect-github==0.3.1",
  "prefect-shell==0.3.1",
  "prefect-sqlalchemy==0.5.2",
  "prometheus-client==0.21.1",
  "proto-plus==1.26.1",
  "protobuf==5.29.4",
  "pyarrow==19.0.1",
  "pyasn1==0.6.1",
  "pyasn1-modules==0.4.1",
  "pycparser==2.22",
  "pydantic==2.10.6",
  "pydantic-core==2.27.2",
  "pydantic-extra-types==2.10.3",
  "pydantic-settings==2.8.1",
  "pydata-google-auth==1.9.1",
  "pygments==2.19.1",
  "pyparsing==3.2.2",
  "pytest==8.3.5",
  "pytest-asyncio==0.25.3",
  "pytest-cov==6.0.0",
  "python-dateutil==2.9.0.post0",
  "python-dotenv==1.0.1",
  "python-slugify==8.0.4",
  "python-socks==2.7.1",
  "pytimeparse==1.1.8",
  "pytz==2024.2",
  "pyyaml==6.0.2",
  "readchar==4.2.1",
  "referencing==0.36.2",
  "regex==2024.11.6",
  "requests==2.32.3",
  "requests-oauthlib==2.0.0",
  "rfc3339-validator==0.1.4",
  "rich==13.9.4",
  "rpds-py==0.23.1",
  "rsa==4.9",
  "ruamel-yaml==0.18.10",
  "ruamel-yaml-clib==0.2.12",
  "sentry-sdk==2.10.0",
  "setuptools==78.0.1",
  "sgqlc==16.4",
  "shellingham==1.5.4",
  "six==1.17.0",
  "sniffio==1.3.1",
  "snowplow-tracker==1.1.0",
  "sqlalchemy==2.0.39",
  "sqlparse==0.5.3",
  "starlette==0.46.1",
  "tenacity==8.2.3",
  "text-unidecode==1.3",
  "time-machine==2.16.0",
  "toml==0.10.2",
  "tomli==2.2.1",
  "typer==0.15.2",
  "typing-extensions==4.12.2",
  "tzdata==2025.2",
  "tzlocal==5.3.1",
  "ujson==5.10.0",
  "uritemplate==4.1.1",
  "urllib3==2.3.0",
  "uvicorn==0.34.0",
  "virtualenv==20.29.3",
  "websockets==13.1",
  "wrapt==1.17.2",
  "zipp==3.21.0",
]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = 'ddpui\/.*\.pyi?$'

[tool.pylint.messages_control]
max-line-length = 100
fail-under = 6.5
disable = [
  "missing-module-docstring",
  "broad-exception-raised",
  "broad-exception-caught",
  "too-few-public-methods",
  "logging-not-lazy",
  "logging-fstring-interpolation"
]

[tool.pytest.ini_options]
testpaths = [
  "tests"
]

[tool.coverage.run]
source = [
  "proxy"
]
omit = [
  "proxy/schemas.py",
  "proxy/exception.py",
  "tests/*",
  "logger.py"
]

[tool.uv.sources]
prefect-airbyte = { git = "https://github.com/Ishankoradia/prefect-airbyte.git", rev = "v0.85" }
